--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1451,7 +1451,15 @@ transform()
     td
      // border 1px solid #000
       padding 5px 0 5px 10px
+      input
+      select
+        width 100%
     thead
       font-weight bold
+    .remove-counter
+      color #ff0000
+      font-size 18px
+      &:hover
+        text-decoration none
 
 
