--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1439,6 +1439,11 @@ transform()
   top -60px
 
 .counters
+  padding 10px 20px
+  min-height 300px
+  h3
+    margin-top 0
+    padding-top 10px
   .counters-menu
     padding-left 0
     margin 0
@@ -1451,7 +1456,7 @@ transform()
     td
      // border 1px solid #000
       padding 5px 0 5px 10px
-      input
+      vertical-align top
       select
         width 100%
     thead
@@ -1461,5 +1466,11 @@ transform()
       font-size 18px
       &:hover
         text-decoration none
+  .counter-input
+    width 70px
+    display inline-block
+  .fa-clock-o
+    font-size 18px
+    margin-left 10px
 
 
