--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -1664,6 +1664,14 @@ h1 {
   position: absolute;
   top: -60px;
 }
+.counters {
+  padding: 10px 20px;
+  min-height: 300px;
+}
+.counters h3 {
+  margin-top: 0;
+  padding-top: 10px;
+}
 .counters .counters-menu {
   padding-left: 0;
   margin: 0;
@@ -1678,8 +1686,8 @@ h1 {
 }
 .counters .counters-table td {
   padding: 5px 0 5px 10px;
+  vertical-align: top;
 }
-.counters .counters-table td input,
 .counters .counters-table td select {
   width: 100%;
 }
@@ -1692,4 +1700,12 @@ h1 {
 }
 .counters .remove-counter:hover {
   text-decoration: none;
+}
+.counter-input {
+  width: 70px;
+  display: inline-block;
+}
+.fa-clock-o {
+  font-size: 18px;
+  margin-left: 10px;
 }
