--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1457,6 +1457,7 @@ transform()
      // border 1px solid #000
       padding 5px 0 5px 10px
       vertical-align top
+      input
       select
         width 100%
     thead
@@ -1467,7 +1468,7 @@ transform()
       &:hover
         text-decoration none
   .counter-input
-    width 70px
+    width 70px !important
     display inline-block
   .fa-clock-o
     font-size 18px
