--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -1688,6 +1688,7 @@ h1 {
   padding: 5px 0 5px 10px;
   vertical-align: top;
 }
+.counters .counters-table td input,
 .counters .counters-table td select {
   width: 100%;
 }
@@ -1702,7 +1703,7 @@ h1 {
   text-decoration: none;
 }
 .counter-input {
-  width: 70px;
+  width: 70px !important;
   display: inline-block;
 }
 .fa-clock-o {
