--- a/vonline_be/war/partials/counters.html
+++ b/vonline_be/war/partials/counters.html
@@ -12,27 +12,21 @@
             <td>Номер</td>
             <td>Тип</td>
             <td class="align-center">Место установки</td>
-            <!--<td>Предыдущее показание</td>-->
+            <td>Предыдущее</td>
             <td>Показание</td>
             <td class="align-center">Расход</td>
             <td></td>
             <td></td>
         </tr>
         </thead>
-        <tr ng-repeat="counter in counters.counters" id="{{counter.id}}"> <!-- ng-repeat="counter in counters.counters" -->
-            <td width="20%">
+        <tr ng-repeat="counter in counters.counters" id="{{counter.id}}">
+            <td width="15%">
                 <span ng-hide="counter.isEdit">{{counter.number}}</span>
                 <input ng-show="counter.isEdit" type="text" ng-model="counter.number"/>
             </td>
             <td width="20%">
                 <div ng-hide="counter.isEdit">
                     {{counter.typeString}}
-                    <!--<span ng-switch-when="0">Горячая вода</span>
-                    <span ng-switch-when="1">Холодная вода</span>
-                    <span ng-switch-when="2">Электричество</span>
-                    <span ng-switch-when="3">Электричество(ночь)</span>
-                    <span ng-switch-when="4">Электричество(день)</span>
-                    <span ng-switch-when="5">Газ</span>-->
                 </div>
                 <select ng-show="counter.isEdit" ng-model="counter.type">
                     <option ng-repeat="item in counters.typesArray" value="{{item.type}}" ng-selected="counter.type == item.type">{{item.typeString}}</option>
@@ -46,16 +40,21 @@
                     <option value="Другое" ng-selected="counter.location=='Другое'">Другое</option>
                 </select>
             </td>
-            <!--<td class="align-center">
-                {{counter.lastValue}}
-                <div><a ui-sref="counters-history({ counterId : counter.id })">история показаний</a></div>
-            </td>-->
-            <td>
-                <input type="text" ng-change="counter.wasEdit = true" class="counter-input" ng-model="counter.currentValue"/>
-                <a ui-sref="counters-history({ counterId : counter.id })" title="история показаний"><i class="fa fa-clock-o"></i></a>
-                <!--<div><a ui-sref="counters-history({ counterId : counter.id })">история показаний</a></div>-->
+            <td class="align-center align-middle">
+                <div ng-show="counter.lastValue > 0">{{counter.lastValue}}</div>
+                <div ng-show="counter.lastValue == 0"> - </div>
+
             </td>
-            <td class="align-center">{{counter.currentValue - counter.lastValue}}</td>
+            <td>
+                <input type="text" ng-change="counter.wasEdit = true" class="counter-input" ng-model="counter.currentValue" ng-keypress="counters"/>
+                <a ui-sref="counters-history({ counterId : counter.id })" title="история показаний"><i class="fa fa-clock-o"></i></a>
+            </td>
+            <td class="align-center align-middle">
+                <div ng-show="counter.currentValue > 0">
+                    {{counter.currentValue - counter.lastValue}}
+                </div>
+                <div ng-show="counter.currentValue == ''"> - </div>
+            </td>
             <td>
                 <a href="#" title="редактировать" ng-click="counters.editCounter(counter)" ng-hide="counter.isEdit"><i class="icon fa fa-pencil"></i></a>
                 <a href="#" title="сохранить" ng-click="counters.saveEditedCounter(counter)" ng-show="counter.isEdit"><i class="icon fa fa-save"></i></a>
