--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -1710,3 +1710,12 @@ h1 {
   font-size: 18px;
   margin-left: 10px;
 }
+.empty {
+  text-align: left;
+  color: #000;
+  font-size: 14px;
+}
+.empty h2 {
+  text-align: center;
+  margin-top: 0;
+}
