--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1474,4 +1474,10 @@ transform()
     font-size 18px
     margin-left 10px
 
-
+.empty
+  text-align left
+  color #000
+  font-size 14px
+  h2
+    text-align center
+    margin-top 0
