--- a/vonline_be/war/partials/important.html
+++ b/vonline_be/war/partials/important.html
@@ -2,7 +2,10 @@
         <section class="forum page ng-cloak" ng-show="base.importantIsActive" ng-cloak>
 
             <div class="lenta">
-                <div ng-if="important.topics.length == 0" class="empty-messages">{{base.emptyMessage}}</div>
+                <div ng-if="important.wallItems.length == 0" class="empty-messages">
+                    <!--{{base.emptyMessage}}-->
+                    <div ng-include="'/partials/empty/empty-important.html'"></div>
+                </div>
                 <div class="lenta-item" ng-repeat="wallItem in important.wallItems"
                         ng-switch on="wallItem.topic.message.type">
 
