--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1467,12 +1467,26 @@ transform()
       font-size 18px
       &:hover
         text-decoration none
+    .fa-pencil
+      font-size 18px
   .counter-input
     width 70px !important
     display inline-block
   .fa-clock-o
     font-size 18px
     margin-left 10px
+
+.gray-text
+  color #cccccc
+
+.modal-remove-counter
+  .modal-dialog
+    width 330px !important
+    text-align center
+    padding 10px
+    margin-top 100px
+  .btn
+    display inline-block
 
 .empty
   text-align left
