--- a/vonline_be/war/partials/counters.html
+++ b/vonline_be/war/partials/counters.html
@@ -66,7 +66,7 @@
                 </div>
                 <div ng-show="counter.currentValue == ''"> - </div>
             </td>
-            <td width="6%" class="align-center">
+            <td width="6%" class="align-center align-middle">
                 <a href="#" title="редактировать" ng-click="counters.editCounter(counter)" ng-hide="counter.isEdit"><i class="fa fa-pencil"></i></a>
                 <a href="#" title="сохранить" ng-click="counters.saveEditedCounter(counter)" ng-show="counter.isEdit">Сохр.</a>
             </td>
