--- a/vonline_be/war/partials/profit.html
+++ b/vonline_be/war/partials/profit.html
@@ -6,7 +6,11 @@
         </section>
 
         <section class="talks-title-block">
-            <div ng-if="!adverts.topics || adverts.topics.length == 0" class="empty-messages">{{base.emptyMessage}}</div>
+            <!--<div ng-if="!adverts.topics || adverts.topics.length == 0" class="empty-messages">{{base.emptyMessage}}</div>-->
+
+            <div ng-if="!adverts.topics || adverts.topics.length == 0" class="empty-messages">
+                <div ng-include="'/partials/empty/empty-profit.html'"></div>
+            </div>
 
             <div class="talks-title" ng-repeat="advert in adverts.topics" id="{{advert.id}}">
 
