--- a/vonline_be/war/partials/counters.html
+++ b/vonline_be/war/partials/counters.html
@@ -74,6 +74,15 @@
         </tr>
     </table>
 
+    <label>
+        <input type="checkbox"/>
+        <span>Присылать копию переданных показаний на emai</span>
+    </label>
+    <label>
+        <input type="checkbox"/>
+        <span>Напоминать о сдаче показаний</span>
+    </label>
+
     <div class="clearfix">
         <a href="#" class="pull-right add-counter" ng-click="counters.addCounter()">Добавить счетчик</a>
         <button class="btn btn-sm btn-primary no-border pull-left" ng-click="counters.save()">Отправить</button>
