--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -4,7 +4,9 @@
         <div ng-include="'templates/createTopic.html'" onload="ctrl=lenta; initCreateTopic(lenta);"></div>
 
             <div class="lenta">
-                <div ng-if="lenta.wallItems.length == 0" class="empty-messages">{{base.emptyMessage}}</div>
+                <div ng-if="!lenta.wallItems || lenta.wallItems.length == 0" class="empty-messages">
+                    <div ng-include="'/partials/empty/empty-main.html'"></div>
+                </div>
                 <div class="lenta-item" ng-repeat="wallItem in lenta.wallItems"
                         ng-switch on="wallItem.topic.message.type">
 
