--- a/vonline_be/war/partials/talks.html
+++ b/vonline_be/war/partials/talks.html
@@ -7,7 +7,9 @@
 
         <section class="talks-title-block">
 
-            <div ng-show="!talks.topics || talks.topics.length == 0" class="empty-messages">{{base.emptyMessage}}</div>
+            <div ng-if="!talks.topics || talks.topics.length == 0" class="empty-messages">
+                <div ng-include="'/partials/empty/empty-talks.html'"></div>
+            </div>
 
             <div class="talks-title" ng-repeat="talk in talks.topics" id="{{talk.id}}">
 
