--- a/vonline_be/war/partials/counters.html
+++ b/vonline_be/war/partials/counters.html
@@ -4,7 +4,7 @@
 
     <script type="text/ng-template" id="myModalContent.html">
         <div class="modal-body">
-            <div>Вы действительно хотите удалить счетчик ?</div>
+            <div>Вы действительно хотите удалить счетчик ? Вместе с ним удалится вся его история.</div>
             <p></p>
             <button class="btn btn-sm no-border btn-primary" ng-click="ok()">Удалить</button>
             <button class="btn btn-sm no-border btn-default" ng-click="cancel()">Отмена</button>
