--- a/vonline_be/war/partials/counters-history.html
+++ b/vonline_be/war/partials/counters-history.html
@@ -4,15 +4,15 @@
     <h3>История показаний счетчика</h3>
 
     <div ng-if="currentCounter.typeString != null">Тип счетчика : <span> {{ currentCounter.typeString }} </span>   </div>
-    <div ng-if="currentCounter.location != null">Место установки : <span> {{ currentCounter.location }} </span> </div>
+    <div ng-if="currentCounter.location != null && currentCounter.location">Место установки : <span> {{ currentCounter.location }} </span> </div>
 
-    <table class="counters-table">
+    <table class="counters-table" ng-if="history.length > 0">
         <thead>
         <tr>
-            <td width="25%">Дата</td>
-            <td width="25%">Значение</td>
-            <td width="25%">Расход</td>
-            <td width="25%">Дата сдачи показаний</td>
+            <td width="33.3%">Дата</td>
+            <td width="33.3%">Значение</td>
+            <td>Расход</td>
+            <!--<td width="25%">Дата сдачи показаний</td>-->
         </tr>
         </thead>
         <tr ng-repeat="item in history" ng-if="item.val">
@@ -22,9 +22,15 @@
             <td ng-if="$index != 0">
                 {{ item.val - history[$index-1].val }}
             </td>
-            <td class="align-center">0</td>
+            <!--<td class="align-center">0</td>-->
         </tr>
     </table>
+
+    <br/>
+
+    <div ng-if="history.length == 0"> У данного счетчика пока нет истории. </div>
+
+    <br/>
 
     <a ui-sref="counters">Назад</a>
 
